--- a/.github/workflows/work-file.yml
+++ b/.github/workflows/work-file.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Meu Primeiro CI
 
 # Controls when the workflow will run
 on:
@@ -15,8 +15,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  GrupoTeste:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -26,11 +25,11 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Primeira tarefa
+        run: echo Executando o que solicitei
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Segunda e terceira tarefa
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo segunda tarefa
+          echo terceira tarefa
